--- a/README
+++ b/README
@@ -1,10 +1,19 @@
+VideoAnalyser
+=============
+
 It is small and some buggy tool, which provide some fuctionality for assisting translations of manga.
+
+Why
+=============
 
 The main problems of translating are:
 1) Don't know Japan language
 2) Up to down and right to left sequence of hieroglyphs.
 
 So. I'm trying to solve it.
+
+Dependencies
+=============
 
 1) It is written on C# VS 2008 on WinForms.
 2) It is using some hack of google translate
